# just-for-fun

./: README.md
lv_linux8.3/: CMakeLists.txt  Makefile  main.c
lv_linux8.3/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h
lv_linux8.3/UI/components/: ui_comp.h  ui_comp_calendar2.c  ui_comp_calendar2.h  ui_comp_hook.c  ui_comp_hook.h
lv_linux8.3/UI/images/: ui_img_1033847363.c  ui_img_151439093.c  ui_img_184318935.c  ui_img_2115575519.c  ui_img_414159209.c  ui_img_525674082.c  ui_img_624413955.c
lv_linux8.3/UI/screens/: ui_Screen1.c  ui_Screen2.c
lv_linux8.3/lv_drivers/sdl/: sdl.c
lv_pc8.3/: CMakeLists.txt  main.c
lv_pc8.3/UI/: filelist.txt  ui.c
lv_pc8.3/UI/images/: ui_img_1119118486.c  ui_img_1324262503.c  ui_img_165777803.c  ui_img_1961050311.c  ui_img_314426297.c  ui_img_457315224.c  (+3 more)
lv_port_linux-release-v8.2/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
lv_port_linux-release-v8.2/lv_drivers/: CMakeLists.txt  library.json  lv_drv_conf_template.h
lv_port_linux-release-v8.2/lv_drivers/display/: fbdev.c  fbdev.h
lv_port_linux-release-v8.2/lv_drivers/indev/: evdev.c  libinput.c
lv_port_linux-release-v8.2/lv_drivers/sdl/: sdl.h  sdl_gpu.c  sdl_gpu.h
lv_port_linux-release-v8.2/lv_drivers/wayland/: README.md  wayland.c  wayland.h
lv_port_linux-release-v8.2/lv_drivers/win32drv/: win32drv.c
lv_port_linux-release-v8.2/lvgl/.github/workflows/: arduino.yml  build_micropython.yml  check_style.yml
lv_port_linux-release-v8.2/lvgl/examples/libs/png/: lv_example_png_1.c
lv_port_linux-release-v8.2/lvgl/examples/libs/sjpg/: lv_example_sjpg_1.c
(+1 files in other folders)
